feat: add solutions to lc problem: No.1600 (#2542)
No.1600.Throne Inheritance